[FEATURE] Support email confirm